# pyfive

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Changelog.rst  README.md  build_paper.sh  codecov.yml  environment.yml  paper.bib  paper.md  pyproject.toml
.github/workflows/: build-and-deploy-on-pypi.yml  install-from-conda.yml  joss-draft-pdf.yml  pytest.yml
doc/: _sidebar.rst.inc  additional.rst  api_reference.rst  cloud.rst  conf.py  gensidebar.py  index.rst  introduction.rst  optimising.rst  p5dump.rst  pyfive_class_diagram.pu
doc/quickstart/: enums.rst  index.rst  installation.rst  opaque.rst  usage.rst
pyfive/: __init__.py  btree.py  core.py  dataobjects.py  datatype_msg.py  h5d.py  h5py.py  h5t.py  high_level.py  indexing.py  inspect.py  misc_low_level.py  p5dump.py  p5t.py  utilities.py
tests/: attr_datatypes.hdf5  compact.hdf5  conftest.py  enum_variable.hdf5  make_attr_datatypes_file.py  make_attr_datatypes_file_2.py  make_chunked.py  make_compact.py  make_compressed.py  make_dataset_datatypes_file.py  make_dim_scales.py  make_earliest_file.py  make_enum_file.py  make_fillvalue.py  make_filter_pipeline_v2.py  make_fletcher32.py  make_groups_file.py  make_latest_file.py  make_netcdf4_classic_file.py  make_new_style_groups_file.py  make_references_file.py  make_resizable.py  opaque_datetime.hdf5  opaque_fixed.hdf5  test_attr_datatypes.py  test_btree_parallel.py  test_buffer_issue.py  test_chunk_index_options.py  test_chunked.py  test_compact.py  test_compound.py  test_compressed.py  test_compressed_v1.py  test_consolidated_metadata.py  test_dataset_datatypes.py  test_dataset_indexing.py  test_dataset_multidim.py  test_dim_scales.py  test_dump.py  test_earliest.py  (+29 more)
tests/data/: btreev2.hdf5  enum_h5variable.hdf5  enum_variable.hdf5  make_dataset_multidim_file.py  noy_AERmonZ_UKESM1-0-LL_piControl_r1i1p1f2_gnz_200001-200012.nc
