[build-system]
requires = [
    "setuptools>=80",
    "setuptools_scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Pyfive Development Team", email = "valeriu.predoi@ncas.ac.uk"},
    {name = "Valeriu Predoi", email = "valeriu.predoi@ncas.ac.uk"},
    {name = "David Hassell", email = "david.hassell@ncas.ac.uk"},
    {name = "Bryan Lawrence", email = "bryan.lawrence@ncas.ac.uk"},
    {name = "Jonathan Helmus", email = "jjhelmus@gmail.com"},
    {name = "Kai Muehlbauer", email = "kai.muehlbauer@uni-bonn.de"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = [
    "readme",
    "version",
]
dependencies = [
    "numpy>=2",
]
description = "A pure python HDF5 reader"
license = {text = "BSD License, Version 3-Clause"}
name = "pyfive"
requires-python = ">=3.10"

[project.scripts]
p5dump = "pyfive.p5dump:main"

[project.optional-dependencies]
test = [
    "dask",
    "flake8",
    "flask",
    "flask-cors",
    "h5netcdf",
    "h5py",
    "moto",
    "netCDF4",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-html",
    "pytest-rerunfailures",
    "pytest-xdist",
    "python-lzf",
    "s3fs>=2025.9.0",  # v-mismatch with boto3 results in ancient s3fs
]

# needed for doc builds
doc = [
    "autodocsumm",
    "sphinx",
    "sphinx_rtd_theme",
]
# develop = [
#     "pre-commit",
#     "pylint",
#     "pydocstyle",
# ]


[project.urls]
Code = "https://github.com/jjhelmus/pyfive"
# Documentation = ""
Issues = "https://github.com/jjhelmus/pyfive/issues"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]
packages = ["pyfive"]
zip-safe = false  # possibly yes

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools_scm]
version_scheme = "release-branch-semver"

[tool.pytest.ini_options]
addopts = [
    "--cov-report=xml:test-reports/coverage.xml",
    "--cov-report=html:test-reports/coverage_html",
    "--html=test-reports/report.html",
]

[tool.coverage.run]
parallel = true
source = ["pyfive"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Ignore until someone has time to fix this:
    "DTZ",      # add tzinfo to datetimes
    "FBT",      # avoid boolean positional arguments
    "N818",     # Exception name should be named with an Error suffix
    "PERF",     # Use comprehensions
    "PGH003",   # Use specific rule codes when ignoring type issues
    "PLR2004",  # Don't use magic values
    "PT009",    # Use a regular `assert` instead of unittest-style `assertListEqual`
    "PT011",    # pytest.raises without match argument
    "PT027",    # Use `pytest.raises` instead of unittest-style `assertRaises`
    "PTH",      # Use pathlib everywhere
    "SIM102",   # Use a single `if` statement instead of nested `if` statements
    "SIM117",   # Use a single `with` statement with multiple contexts instead of nested `with` statements
    "TD003",    # Missing issue link on the line following this TODO
    "TRY400",   # Uses of `logging.error` instead of `logging.exception` when logging an exception
    # Really ignore:
    "F401",     # Need to keep unused imports (from pyfive.h5d import DatasetID)
    "F841",     # Local variable assigned to but never used
    "D105",     # Disable missing docstring in magic method as these are well defined.
    "D107",     # Disable Missing docstring in `__init__`
    "E501",     # Disable line-too-long as this is taken care of by the formatter.
    "FIX002",   # TODOs can be useful when something cannot be done immediately.
    "PLW1641",  # Implementing __hash__ on mutable objects may be more confusing than not doing it.
    "S603",     # Uncheckable
    "TD002",    # Missing author in TODO: can be seen from git history
    "TRY003",   # Fixing this would require many exceptions
    "D400",     # First line should end with a period
    "D401",
    "D404",     # three superficial complaints about docstrings (imperative, punctuation etc)
    "S101",     # Use of `assert` detected
    "SLF001",   # Testing private members is ok
    "T201",     # `print` found - leave it
]
future-annotations = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = true
# turn these on at a later stage
# [tool.ruff.lint.isort]
# known-first-party = ["pyfive"]
# [tool.ruff.lint.pydocstyle]
# convention = "numpy"
# [tool.ruff.lint.pylint]
# max-args = 7

[tool.mypy]
# See https://mypy.readthedocs.io/en/stable/config_file.html
ignore_missing_imports = true
enable_error_code = [
    "truthy-bool",
]
